cambiar estilos para usar tres columnas

--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -19,65 +19,103 @@ import Layout from "../layouts/Layout.astro";
 			<p>Todo lo que me gusta en un solo lugar</p>
 		</div>
 
-		<div class="links">
-			<!-- Personaliza estos enlaces con tus páginas favoritas -->
-			<a href="https://github.com" class="link-item" target="_blank">
-				<img
-					src="https://cdn-icons-png.flaticon.com/512/25/25231.png"
-					alt="GitHub"
-					class="link-icon"
-				/>
-				<span class="link-text">GitHub - Repositorios de código</span>
-			</a>
+		<div class="links-container">
+			<!-- Columna 1 -->
+			<div class="links-column">
+				<a
+					href="https://github.com"
+					class="link-item"
+					target="_blank"
+					style="animation-delay: 0.1s;"
+				>
+					<img
+						src="https://cdn-icons-png.flaticon.com/512/25/25231.png"
+						alt="GitHub"
+						class="link-icon"
+					/>
+					<span class="link-text">GitHub - Repositorios de código</span>
+				</a>
 
-			<a href="https://medium.com" class="link-item" target="_blank">
-				<img
-					src="https://cdn-icons-png.flaticon.com/512/2111/2111501.png"
-					alt="Medium"
-					class="link-icon"
-				/>
-				<span class="link-text">Medium - Artículos y tutoriales</span>
-			</a>
+				<a
+					href="https://medium.com"
+					class="link-item"
+					target="_blank"
+					style="animation-delay: 0.2s;"
+				>
+					<img
+						src="https://cdn-icons-png.flaticon.com/512/2111/2111501.png"
+						alt="Medium"
+						class="link-icon"
+					/>
+					<span class="link-text">Medium - Artículos y tutoriales</span>
+				</a>
+			</div>
 
-			<a href="https://www.youtube.com" class="link-item" target="_blank">
-				<img
-					src="https://cdn-icons-png.flaticon.com/512/1384/1384060.png"
-					alt="YouTube"
-					class="link-icon"
-				/>
-				<span class="link-text">YouTube - Videos educativos</span>
-			</a>
+			<!-- Columna 2 -->
+			<div class="links-column">
+				<a
+					href="https://www.youtube.com"
+					class="link-item"
+					target="_blank"
+					style="animation-delay: 0.3s;"
+				>
+					<img
+						src="https://cdn-icons-png.flaticon.com/512/1384/1384060.png"
+						alt="YouTube"
+						class="link-icon"
+					/>
+					<span class="link-text">YouTube - Videos educativos</span>
+				</a>
 
-			<a href="https://stackoverflow.com" class="link-item" target="_blank">
-				<img
-					src="https://cdn-icons-png.flaticon.com/512/2111/2111628.png"
-					alt="Stack Overflow"
-					class="link-icon"
-				/>
-				<span class="link-text">Stack Overflow - Preguntas y respuestas</span>
-			</a>
+				<a
+					href="https://stackoverflow.com"
+					class="link-item"
+					target="_blank"
+					style="animation-delay: 0.4s;"
+				>
+					<img
+						src="https://cdn-icons-png.flaticon.com/512/2111/2111628.png"
+						alt="Stack Overflow"
+						class="link-icon"
+					/>
+					<span class="link-text">Stack Overflow - Preguntas y respuestas</span>
+				</a>
+			</div>
 
-			<a href="https://www.udemy.com" class="link-item" target="_blank">
-				<img
-					src="https://cdn-icons-png.flaticon.com/512/1688/1688400.png"
-					alt="Udemy"
-					class="link-icon"
-				/>
-				<span class="link-text">Udemy - Cursos en línea</span>
-			</a>
+			<!-- Columna 3 -->
+			<div class="links-column">
+				<a
+					href="https://www.udemy.com"
+					class="link-item"
+					target="_blank"
+					style="animation-delay: 0.5s;"
+				>
+					<img
+						src="https://cdn-icons-png.flaticon.com/512/1688/1688400.png"
+						alt="Udemy"
+						class="link-icon"
+					/>
+					<span class="link-text">Udemy - Cursos en línea</span>
+				</a>
 
-			<a href="https://www.reddit.com" class="link-item" target="_blank">
-				<img
-					src="https://cdn-icons-png.flaticon.com/512/2111/2111589.png"
-					alt="Reddit"
-					class="link-icon"
-				/>
-				<span class="link-text">Reddit - Comunidades de interés</span>
-			</a>
+				<a
+					href="https://www.reddit.com"
+					class="link-item"
+					target="_blank"
+					style="animation-delay: 0.6s;"
+				>
+					<img
+						src="https://cdn-icons-png.flaticon.com/512/2111/2111589.png"
+						alt="Reddit"
+						class="link-icon"
+					/>
+					<span class="link-text">Reddit - Comunidades de interés</span>
+				</a>
+			</div>
 		</div>
 
 		<footer>
-			© 2025 Mis Enlaces Favoritos - Todos los derechos reservados
+			© 2023 Mis Enlaces Favoritos - Todos los derechos reservados
 		</footer>
 	</div>
 </Layout>
