--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -1,3 +1,7 @@
+---
+import "../styles/global.css";
+---
+
 <!doctype html>
 <html lang="es">
 	<head>
@@ -40,6 +44,7 @@
 	.profile-img {
 		width: 120px;
 		height: 120px;
+		display: inline-flex;
 		border-radius: 50%;
 		object-fit: cover;
 		border: 4px solid white;
