dividir responsabilidades unicas para los componentes

--- a/src/components/Columna.astro
+++ b/src/components/Columna.astro
@@ -5,3 +5,10 @@
 <div class="links-column">
   <slot />
 </div>
+
+<style>
+  .links-column {
+    display: flex;
+    flex-direction: column;
+  }
+</style>
