--- a/src/components/Footer.astro
+++ b/src/components/Footer.astro
@@ -3,3 +3,11 @@
 ---
 
 <footer>© 2023 Mis Enlaces Favoritos - Todos los derechos reservados</footer>
+
+<style>
+  footer {
+    margin-top: 30px;
+    color: #7f8c8d;
+    font-size: 14px;
+  }
+</style>
