agregar fecha dinamica afooter

--- a/src/components/Footer.astro
+++ b/src/components/Footer.astro
@@ -1,8 +1,8 @@
 ---
-
+const year = new Date().getFullYear();
 ---
 
-<footer>© 2023 Mis Enlaces Favoritos - Todos los derechos reservados</footer>
+<footer>© {year} Mis Enlaces Favoritos - Todos los derechos reservados</footer>
 
 <style>
   footer {
