--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -7,7 +7,11 @@ import "../styles/global.css";
 	<head>
 		<meta charset="UTF-8" />
 		<meta name="viewport" content="width=device-width" />
-		<link rel="icon" type="image/svg+xml" href="/favicon.svg" />
+		<link
+			rel="icon"
+			type="image/svg+xml"
+			href="https://cdn-icons-png.flaticon.com/128/2838/2838908.png"
+		/>
 		<meta name="generator" content={Astro.generator} />
 		<title>Mis Enlaces de Interés</title>
 	</head>
