mejorar estilos de encabezado y separador con clases de diseño

--- a/src/components/Separator.astro
+++ b/src/components/Separator.astro
@@ -2,4 +2,4 @@
 
 ---
 
-<hr class="my-8" />
+<hr class="my-8 border-0 h-2 bg-gradient-to-r from-purple-500 via-pink-500 to-red-500 rounded-full shadow-lg" />
