--- a/src/components/ColumnaTitle.astro
+++ b/src/components/ColumnaTitle.astro
@@ -6,4 +6,8 @@ interface Props {
 const { text } = Astro.props;
 ---
 
-<h2 class="text-2xl pb-4">{text}</h2>
+<h2
+  class="text-3xl font-bold pb-4 text-transparent bg-clip-text bg-gradient-to-r from-gray-900 via-slate-800 to-slate-500 drop-shadow-lg tracking-wide"
+>
+  {text}
+</h2>
