--- a/src/components/LinkSocial.astro
+++ b/src/components/LinkSocial.astro
@@ -9,14 +9,14 @@ const { hrefLink, imgSrc, imgAlt, spanText } = Astro.props;
   style="animation-delay: 0.1s;"
 >
   <img src={imgSrc} alt={imgAlt} class="link-icon" />
-  <span class="link-text">{spanText}</span>
+  <span class="link-text text-balance">{spanText}</span>
 </a>
 
 <style>
   .link-item {
     background: white;
-    margin-bottom: 15px;
-    padding: 12px 20px;
+    margin-bottom: 10px;
+    padding: 12px 15px;
     border-radius: 10px;
     box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
     transition: all 0.3s ease;
@@ -39,7 +39,7 @@ const { hrefLink, imgSrc, imgAlt, spanText } = Astro.props;
   .link-icon {
     width: 30px;
     height: 30px;
-    margin-right: 15px;
+    margin-right: 10px;
     object-fit: contain;
   }
 
